@@ -42,6 +42,7 @@ class MapFormulaeToC < MapValuesToC
     'INDEX2' => 'excel_index_2',
     'INDEX3' => 'excel_index',
     'INT' => 'excel_int',
+    'LARGE' => 'large',
     'LEFT1' => 'left_1',
     'LEFT2' => 'left',
     'MATCH2' => 'excel_match_2',
